# ServiceReport

./: .gitignore  Cargo.toml  README.md  calendar-config.yaml.example  rates.yaml.example  requirements.txt
src/: calendar_report.py  calendar_to_service.py  cli.rs  gcalendar_helper.py  main.rs  report_cli.py  report_server.py  server.rs
src/calendar/: config.rs  google.rs  mod.rs
src/templates/: home.html  rates.html
templates/: home.html  rates.html  report.html
