[package]
name = "service-report"
version = "0.1.0"
edition = "2024"

[dependencies]
form_urlencoded = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"
axum = "0.8"
tower = "0.5"
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
yup-oauth2 = { version = "6", features = ["hyper-rustls"] }

[profile.release]
strip = true
lto = true